# OpenGLFuns

./: .gitignore  CMakeLists.txt
lib/: glfw3.lib  glfw3_d.lib
src/: main.cpp
